WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158138
AX: Wrong CharacterOffset from VisiblePosition with composed characters
https://bugs.webkit.org/show_bug.cgi?id=158138
Summary
AX: Wrong CharacterOffset from VisiblePosition with composed characters
Nan Wang
Reported
2016-05-26 17:29:03 PDT
The conversion between VisiblePosition and CharacterOffset is incorrect when there are composed characters. <
rdar://problem/26439048
>
Attachments
Initial patch
(6.49 KB, patch)
2016-05-26 17:36 PDT
,
Nan Wang
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Nan Wang
Comment 1
2016-05-26 17:36:33 PDT
Created
attachment 279930
[details]
Initial patch
WebKit Commit Bot
Comment 2
2016-05-26 18:40:07 PDT
Comment on
attachment 279930
[details]
Initial patch Clearing flags on attachment: 279930 Committed
r201443
: <
http://trac.webkit.org/changeset/201443
>
WebKit Commit Bot
Comment 3
2016-05-26 18:40:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug