AX: Wrong CharacterOffset from VisiblePosition with composed characters https://bugs.webkit.org/show_bug.cgi?id=158138

Reviewed by Chris Fleizach.

Source/WebCore:

The conversion logic is not correct when the text node contains composed characters.
We should use VisiblePosition's offset directly for text nodes so we won't mess things up.

Test: accessibility/mac/character-offset-visible-position-conversion-with-emoji.html

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::visiblePositionFromCharacterOffset):
(WebCore::AXObjectCache::characterOffsetFromVisiblePosition):

LayoutTests:

* accessibility/mac/character-offset-visible-position-conversion-with-emoji-expected.txt: Added.
* accessibility/mac/character-offset-visible-position-conversion-with-emoji.html: Added.


Canonical link: https://commits.webkit.org/176246@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201443 268f45cc-cd09-0410-ab3c-d52691b4dbfc